# reedfrost-wasm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/actions/frontend-setup/: action.yaml
.github/workflows/: deploy.yaml  pre-commit.yaml  test.yaml
frontend/: index.html  tsconfig.json
frontend/src/: App.css  App.tsx  main.css  main.tsx
frontend/src/components/: Slider.css  Slider.tsx  TrajectoryChart.test.tsx  TrajectoryChart.tsx
frontend/src/styles/: main.css
src/: lib.rs  main.rs  model.rs
