[package]
name = "reedfrost"
version = "0.1.0"
edition = "2024"
description = "A simple reed-frost model in Rust"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assert_approx_eq = "1.1.0"
memoize = "0.5.1"
ordered-float = "5.0.0"
wasm-bindgen = "0.2.100"
rand_distr = "0.5.1"
probability = "0.20.3"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
